--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/ws": "^8.5.12",
     "dotenv": "^16.4.5",
+    "kafkajs": "^2.2.4",
+    "pg": "^8.13.1",
     "redis": "^4.7.0",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
