--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,20 @@ version: '3'
 
 services:
   estimate-be:
-    # image: .
+    # image: imageName
     build: .
     ports:
       - '5001:5001'  
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      PGHOST: ${PGHOST}
+      PGDATABASE: ${PGDATABASE}
+      PGUSER: ${PGUSER}
+      PGPASSWORD: ${PGPASSWORD}
     depends_on:
       - redis
+      - kafka
     networks:
       - estimate-network
 
@@ -18,6 +23,17 @@ services:
     image: redis:alpine
     ports:
       - '6379:6379'
+    networks:
+      - estimate-network
+
+  kafka:
+    image: kafka:3.7.1
+    ports:
+      - '9092:9092'
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9092
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9092
+      KAFKA_DISABLE_JMX: 'true' # Disable JMX if you don't need it
     networks:
       - estimate-network
 
