--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: '3'
 
 services:
   estimate-be:
-    # image: imageName
     build: .
     ports:
-      - '5001:5001'  
+      - "5001:5001"
     environment:
       REDIS_HOST: redis
       REDIS_PORT: 6379
@@ -13,29 +12,37 @@ services:
       PGDATABASE: ${PGDATABASE}
       PGUSER: ${PGUSER}
       PGPASSWORD: ${PGPASSWORD}
+      KAFKA_BOOTSTRAP_SERVERS: estimate-kafka:9092
     depends_on:
-      - redis
-      - kafka
+      - estimate-kafka
+      - estimate-redis
     networks:
       - estimate-network
 
-  redis:
+  estimate-redis:
     image: redis:alpine
     ports:
-      - '6379:6379'
+      - "6379:6379"
+    depends_on:
+      - estimate-kafka
     networks:
       - estimate-network
 
-  kafka:
-    image: kafka:3.7.1
-    ports:
-      - '9092:9092'
+  estimate-kafka:
+    image: 'bitnami/kafka:3.7.1'
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9092
-      KAFKA_LISTENERS: INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9092
-      KAFKA_DISABLE_JMX: 'true' # Disable JMX if you don't need it
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@estimate-kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+
+    ports:
+      - "9092:9092"
     networks:
       - estimate-network
 
 networks:
   estimate-network:
+    driver: bridge
