--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@types/ws": "^8.5.12",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "kafkajs": "^2.2.4",
     "pg": "^8.13.1",
     "redis": "^4.7.0",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
