--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     # image: beyondhuman6969/estimate:1.8
     ports:
-      - "5000:5000"  # WebSocket server port
+      - "5001:5001"  # WebSocket server port
       - "5003:5003"  # HTTP server port
     environment:
       REDIS_HOST: redis
@@ -22,7 +22,8 @@ services:
       - estimate-network
 
   estimate-redis:
-    image: redis:alpine
+    image: redis/redis-stack-server:latest
+    restart: unless-stopped
     ports:
       - "6379:6379"
     depends_on:
@@ -32,10 +33,12 @@ services:
 
   estimate-kafka:
     image: 'bitnami/kafka:3.7.1'
+    restart: unless-stopped
     environment:
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://estimate-kafka:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@estimate-kafka:9093
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
