--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "kafkajs": "^2.2.4",
+    "node-cron": "^3.0.3",
     "pg": "^8.13.1",
     "redis": "^4.7.0",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/node-cron": "^3.0.11"
   }
 }
