--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   estimate-be:
     build: .
-    # image: beyondhuman6969/estimate:1.8
+    # image: beyondhuman6969/estimate:1.11
     ports:
       - "5001:5001"  # WebSocket server port
       - "5003:5003"  # HTTP server port
@@ -14,33 +14,33 @@ services:
       PGDATABASE: ${PGDATABASE}
       PGUSER: ${PGUSER}
       PGPASSWORD: ${PGPASSWORD}
-      KAFKA_BOOTSTRAP_SERVERS: estimate-kafka:9092
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     depends_on:
-      - estimate-kafka
-      - estimate-redis
+      - kafka
+      - redis
     networks:
       - estimate-network
 
-  estimate-redis:
+  redis:
     image: redis/redis-stack-server:latest
     restart: unless-stopped
     ports:
       - "6379:6379"
     depends_on:
-      - estimate-kafka
+      - kafka
     networks:
       - estimate-network
 
-  estimate-kafka:
+  kafka:
     image: 'bitnami/kafka:3.7.1'
-    restart: unless-stopped
+    hostname: kafka
     environment:
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://estimate-kafka:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@estimate-kafka:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
 
     ports:
